--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="myQR">
 <script>
 var area = document.getElementById('myQR');
-new QRCode(area, "http://rifkytech.github.io"); // URL-nya diganti dengan isi yang diinginkan
+new QRCode(area, "https://farihkhoirulhuda.github.io"); // URL-nya diganti dengan isi yang diinginkan
 </script>
 </div>
 
